# DirFlow

./: .gitignore  LICENSE  README.md  SECURITY.md  config.py  dirflow.service  install.ps1  install.sh  local-file-organizer.service  organizer.py  pyproject.toml
tests/: test_organizer.py
